added about and contact pages

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
     <!-- Jumbotron Header -->
     <header class="jumbotron my-4">
-      <h1 class="display-3">Hello, I'm Charles!</h1>
+      <h1 class="display-3">Contact</h1>
       <p class="lead">Welcome to my portfolio site. 
       Here you can learn about my projects, skills, aspirations, and business information.</p>
       <a href="#" class="btn btn-primary btn-lg">My Resume</a>
