--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -23,19 +24,19 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Charles Seaver</a>
+      <a class="navbar-brand" href="index.html">Charles Seaver</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link active" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -49,70 +50,27 @@
   <div class="container">
 
     <!-- Jumbotron Header -->
-    <header class="jumbotron my-4">
-      <h1 class="display-3">About</h1>
-      <p class="lead">Welcome to my portfolio site. 
-      Here you can learn about my projects, skills, aspirations, and business information.</p>
-      <a href="#" class="btn btn-primary btn-lg">My Resume</a>
+    <header>
+      <h1 class="display-3">About me...</h1>
+      <p class="lead">
+       </p>
     </header>
 
     <!-- Page Features -->
-    <div class="row text-center">
+    <div class="row" id="aboutme">
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
-          </div>
+        <div class="col-md-7 col-sm-12">
+          <p class="aboutme">Hello, I'm Charles Seaver! I'm currently a senior at James Madison University majoring in engineering with minors in computer science, robotics, and mathematics. I plan on graduating in Spring of 2021 then gain more experience in the robotics/AI field.</p><p> During my undergraduate studies, I have been learning statics/dynamics, thermodynamics, circuits, etc. I was enjoying myself, solving mentally stimulating problems were stressful but very rewarding. However I felt like I was missing a piece of me that had a passion in computers. So I decided to learn programming during my freetime. I started learning Java and C++, and then I bought my first arduino and raspberry pi. I created <a href="mailto:cseaver98@gmail.com">projects</a> using these devices, and I was really enjoying myself. During this time I thought to myself that I wanted to pursue a career in robotics/AI, where I can combine my engineering and programming skills. </p><p> To help jump start my robotics career, I picked up a Robotics Minor for my last year as an undergraduate. I will be taking courses covering autonomous robots, mobile robots, mechatronics, and artificial intelligence. I will update my site about these experiences.
+
+          </p>
         </div>
-      </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
-          </div>
+        <div class="col-md-5 col-sm-12">
+          <img src="images/charles.jpeg" alt="A smiling picture of Charles" class="img-fluid">
         </div>
-      </div>
 
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <!-- /.row -->
+    
+    </div> <!-- end rows -->
 
   </div>
   <!-- /.container -->
@@ -120,7 +78,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Charles Seaver 2020</p>
     </div>
     <!-- /.container -->
   </footer>
