--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/heroic-features.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -53,7 +54,7 @@
       <h1 class="display-3">Hello, I'm Charles!</h1>
       <p class="lead">Welcome to my portfolio site. 
       Here you can learn about my projects, skills, aspirations, and business information.</p>
-      <a href="#" class="btn btn-primary btn-lg">My Resume</a>
+      <a href="resume.html" class="btn btn-primary btn-lg">My Resume</a>
     </header>
 
     <!-- Page Features -->
@@ -61,56 +62,55 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="images/mirror.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Smart Mirror ft. Alexa</h4>
+            <p class="card-text">A translucent mirror that displays time, weather, and music player. Displays from the output of a raspberry pi and has Alexa functionality. </p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="project1.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="images/Ring Pop Logo.png" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">Ring Pop: a Speedrun Game</h4>
+            <p class="card-text">An android game where users test their skills in trying to fit a circle inside a ring. Currently free for download at Google Playstore.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="project2.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="images/drone.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <h4 class="card-title">Analyzing Algae Blooms</h4>
+            <p class="card-text">Capturing multispectral images of bodies of water from autonomous drone flights. Images are analyzed for algae bloom change through created python script and ArcGIS plug-in.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="project3.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+          <img class="card-img-top" src="images/bike.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo magni sapiente, tempore debitis beatae culpa natus architecto.</p>
+            <h4 class="card-title">Human Powered Vehicle</h4>
+            <p class="card-text">A human powered vehicle designed and fabricated for a James Madison University professor with spastic cerebral palsy. </p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="project4.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
-
     </div>
     <!-- /.row -->
 
@@ -120,7 +120,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Charles Seaver 2020</p>
     </div>
     <!-- /.container -->
   </footer>
