--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p class="card-text">A translucent mirror that displays time, weather, and music player. Displays from the output of a raspberry pi and has Alexa functionality. </p>
           </div>
           <div class="card-footer">
-            <a href="project1.html" class="btn btn-primary">Find Out More!</a>
+            <a href="smartmirror.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
             <p class="card-text">An android game where users test their skills in trying to fit a circle inside a ring. Currently free for download at Google Playstore.</p>
           </div>
           <div class="card-footer">
-            <a href="project2.html" class="btn btn-primary">Find Out More!</a>
+            <a href="ringpop.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -94,7 +94,7 @@
             <p class="card-text">Capturing multispectral images of bodies of water from autonomous drone flights. Images are analyzed for algae bloom change through created python script and ArcGIS plug-in.</p>
           </div>
           <div class="card-footer">
-            <a href="project3.html" class="btn btn-primary">Find Out More!</a>
+            <a href="drone.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
             <p class="card-text">A human powered vehicle designed and fabricated for a James Madison University professor with spastic cerebral palsy. </p>
           </div>
           <div class="card-footer">
-            <a href="project4.html" class="btn btn-primary">Find Out More!</a>
+            <a href="HPV.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
