--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <div class="card h-100">
           <img class="card-img-top" src="images/bike.jpg" alt="">
           <div class="card-body">
-            <h4 class="card-title">Human Powered Vehicle</h4>
-            <p class="card-text">A human powered vehicle designed and fabricated for a James Madison University professor with spastic cerebral palsy. </p>
+            <h4 class="card-title">Human-Powered Vehicle</h4>
+            <p class="card-text">A human-powered vehicle designed and constructed for a James Madison University professor with spastic cerebral palsy. </p>
           </div>
           <div class="card-footer">
             <a href="HPV.html" class="btn btn-primary">Find Out More!</a>
@@ -113,7 +113,6 @@
       </div>
     </div>
     <!-- /.row -->
-
   </div>
   <!-- /.container -->
 
