--- a/ringpop.html
+++ b/ringpop.html
@@ -2,6 +2,21 @@
 <html lang="en">
 
 <head>
+<style>
+figure {
+  border: 1px #cccccc solid;
+  padding: 4px;
+  margin: auto;
+}
+
+figcaption {
+  background-color: white;
+  color: black;
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
+}
+</style>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -36,7 +51,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="about.html">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
@@ -60,14 +75,25 @@
     <div class="row" id="aboutme">
 
         <div class="col-md-7 col-sm-12">
-          <p class="aboutme"><a href="https://play.google.com/store/apps/details?id=com.something.cseav.rings" target="_blank">Ring Pop: a Speedrun Game</a>
+          <p class="aboutme">My app features a simple phone game where players try to fit a circle inside the area of a ring. The ring may be moving or growing in size, depending on the level the player is on. After having completed the final level (level 90), the player wins the game! The time took to complete the game is then recorded in a database and displayed on the games highscore page if it is one of the fastest times recorded. <p></p>
+
+          I programmed this game using Java with its object-oriented style. The ring, circle, color... all have different classes to construct these objects. This way it is easy to create, change, and destroy objects in the way I want the game to run. To support my highscore page, I used Google Firebase, a free database service which allows me to store the players winning time and name. <p></p>
+
+          Check out the Google Playstore page: <a href="https://play.google.com/store/apps/details?id=com.something.cseav.rings" target="_blank">Ring Pop: a Speedrun Game</a>
+          <p></p>
+          Check out a short gameplay of my app &#8594;
+        
+
 
           </p>
         </div>
         <div class="col-md-5">
-           <video width="450" height="400" controls>
+          <figure>
+           <video width="435" height="400" controls>
             <source src="videos/ringpop.mp4" type="video/mp4">
            </video>
+           <figcaption>Ring Pop: a Speedrun Game (short playthrough)</figcaption>
+          </figure>
         </div>
 
     
