--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card h-100">
-          <img class="card-img-top" src="images/ringpop.png" alt="">
+          <img class="card-img-top" src="images/mirror.jpg" alt="">
           <div class="card-body">
             <h4 class="card-title">Ring Pop: a Speedrun Game</h4>
             <p class="card-text">An android game where users test their skills in trying to fit a circle inside a ring. Currently free for download at Google Playstore.</p>
