--- a/drone.html
+++ b/drone.html
@@ -83,7 +83,7 @@ figcaption {
 
          <div class="col-md-5 col-sm-12">
           <figure>
-          <img src="images/dronesteam.jpg" alt="The drones team" class="img-fluid">
+          <img src="images/dronesteam.JPG" alt="The drones team" class="img-fluid">
           <figcaption>The Project Team</figcaption>
           </figure>
         </div>
