--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <header class="jumbotron my-4">
       <h1 class="display-3">Hello, I'm Charles!</h1>
       <p class="lead">Welcome to my portfolio site. 
-      Here you can learn about my projects, skills, aspirations, and business information.</p>
+      Here you can learn about my projects, skills, aspirations, and contact information.</p>
       <a href="resume.html" class="btn btn-primary btn-lg">My Resume</a>
     </header>
 
